# simple-ray-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md
settings/: camera.json
settings/camera/: 1.json  2.json  6.json  bouncing_spheres.json  checkered_spheres.json  cornell_box.json  earth.json  final_scene.json  quads.json  simple_light.json
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
