[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
image = "0.25.6"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
